--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir/dist",
+    "build": "parcel build index.html --dist-dir ./dist",
     "compile:sass": "node-sass src/sass/main.scss src/css/main.css -w"
   },
   "author": "Alexandra Simion",
