build command succeed

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "forkify",
   "version": "2.0.0",
   "description": "search over 1m recipes, bookmark them, add new ones, plan your meals for the week and much more",
-  "main": "index.html",
+  "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir ./dist",
+    "build": "parcel build index.html",
     "compile:sass": "node-sass src/sass/main.scss src/css/main.css -w"
   },
   "author": "Alexandra Simion",
